refactoring - Frontend: create basic routes and responsive/mobile-compatible layouts wireframes (by Figma design)

--- a/frontend/src/app/components/navbar/navbar.component.html
+++ b/frontend/src/app/components/navbar/navbar.component.html
@@ -9,7 +9,7 @@
 -->
 
 <nav>
-  <div class="menu">
+  <div class="app-menu">
     <span class="logo">Logo</span>
     <ul>
       <li routerLinkActive="navbar-item--active" [routerLink]="['/overview']">Overview</li>
@@ -18,15 +18,15 @@
       <li routerLinkActive="navbar-item--active" [routerLink]="['/settings']">Settings</li>
     </ul>
   </div>
-  <div class="account">admin</div>
-  <div class="humburger">
+  <div class="app-account">admin</div>
+  <div class="app-hamburger">
     <span>hum</span>
     <ul>
       <li routerLinkActive="navbar-item--active" [routerLink]="['/overview']">Overview</li>
       <li routerLinkActive="navbar-item--active" [routerLink]="['/scenarios']">Scenarios</li>
       <li routerLinkActive="navbar-item--active" [routerLink]="['/jobs']">Jobs History</li>
       <li routerLinkActive="navbar-item--active" [routerLink]="['/settings']">Settings</li>
-      <li class="account">admin</li>
+      <li class="app-account">admin</li>
     </ul>
   </div>
 
