--- a/frontend/src/app/view/overview/overview.component.html
+++ b/frontend/src/app/view/overview/overview.component.html
@@ -1,1 +1,23 @@
-<app-overview-layout></app-overview-layout>
+<app-overview-layout>
+
+  <div class="widgets-left-placeholder">left</div>
+  <div class="widgets-center-placeholder">center</div>
+  <div class="widgets-right-placeholder">right</div>
+
+
+  <div class="cards-placeholder">
+    <div class="app-card--sm">zxc1</div>
+    <div class="app-card--sm">zxc2</div>
+    <div class="app-card--sm">zxc3</div>
+    <div class="app-card--sm">zxc4</div>
+  </div>
+
+  <div class="records-placeholder">
+    <div class="app-record">Record 1</div>
+    <div class="app-record">Record 2</div>
+    <div class="app-record">Record 3</div>
+    <div class="app-record">Record 4</div>
+    <div class="app-record">Record 5</div>
+  </div>
+
+</app-overview-layout>
