--- a/frontend/src/app/view/scenarios/scenarios.component.html
+++ b/frontend/src/app/view/scenarios/scenarios.component.html
@@ -1,2 +1,31 @@
 <app-sidebar-page-layout>
+
+  <div class="page-actions-placeholder">
+    <ul class="page-actions">
+      <li class="title-actions-item">Page action 1</li>
+      <li class="title-actions-item">Page action 2</li>
+      <li class="title-actions-item">Page action 3</li>
+    </ul>
+  </div>
+
+  <div class="data-placeholder">
+
+    <div class="app-card xs12 m6 m4 l3 xl2">Card</div>
+    <div class="app-card xs12 m6 m4 l3 xl2">Card</div>
+    <div class="app-card xs12 m6 m4 l3 xl2">Card</div>
+    <div class="app-card xs12 m6 m4 l3 xl2">Card</div>
+    <div class="app-card xs12 m6 m4 l3 xl2">Card</div>
+    <div class="app-card xs12 m6 m4 l3 xl2">Card</div>
+    <div class="app-card xs12 m6 m4 l3 xl2">Card</div>
+    <div class="app-card xs12 m6 m4 l3 xl2">Card</div>
+    <div class="app-card xs12 m6 m4 l3 xl2">Card</div>
+    <div class="app-card xs12 m6 m4 l3 xl2">Card</div>
+
+  </div>
+
+  <div class="sidebar-placeholder">
+    <h2>Sidebar header</h2>
+    <div class="app-filters">filters</div>
+  </div>
+
 </app-sidebar-page-layout>
