--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -8,7 +8,7 @@
 </div>
 -->
 
-<div class="container container--colorful">
+<div class="app-container container--colorful">
   <app-navbar></app-navbar>
   <router-outlet></router-outlet>
 </div>
