--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -301,6 +301,43 @@ main {
 
 
 
+/* BUTTONS */
+button {
+  border-radius: 50px;
+  border: none;
+  min-height: 40px;
+  line-height: 40px;
+  padding: 0px 1.25em 0px 1.25em;
+  font-size: 18px;
+  font-family: 'Ubuntu', sans-serif;
+  font-weight: 400;
+  color: #ffffff;
+  cursor: pointer;
+  position: relative;
+  box-shadow: 0px 15px 20px 0 #0000002e, 0px 5px 10px 0 #00000010;
+}
+button:focus {
+  outline: none;
+}
+button:hover {
+  filter: opacity(70%) hue-rotate(30deg);
+}
+button:active {
+  filter: opacity(100%);
+}
+button + button {
+  margin-left: 1em;
+}
+
+.btn--accent1 { background: #39A0FF; border: 1px solid #39A0FF; }
+.btn--accent2 { background: #73C376; border: 1px solid #73C376; }
+.btn--dark    { background: #000000; border: 1px solid #000000; }
+.btn--white   { background: #ffffff; border: 1px solid #545454; color: #000; }
+
+/* END BUTTONS */
+
+
+
 
 /*
 @import "ag-grid-community/dist/styles/ag-grid.css";
