--- a/frontend/src/app/layouts/overview-layout/overview-layout.component.html
+++ b/frontend/src/app/layouts/overview-layout/overview-layout.component.html
@@ -6,7 +6,7 @@
           <div>
             <ng-content select=".widgets-left-placeholder"></ng-content>
           </div>
-          <div class="action"><button>Run All Scenarios</button></div>
+          <div class="action"><button class="button button--dark">Run All Scenarios</button></div>
         </div>
         <div class="app-widgets-column except-xs">
           <div class="widgets-grid">
@@ -22,13 +22,13 @@
 
         <div class="app-column--left">
 
-          <div class="app-row-title"><h3>Favorite Scenarios</h3><span>View all</span></div>
+          <div class="app-row-title"><h2 class="column-header">Favorite Scenarios</h2><span>View all</span></div>
           <ng-content select=".cards-placeholder"></ng-content>
 
         </div>
         <div class="app-column--right">
 
-          <div class="app-row-title"><h3>Recent Runs</h3><span>actions</span></div>
+          <div class="app-row-title"><h2 class="column-header">Recent Runs</h2><span>actions</span></div>
           <ng-content select=".records-placeholder"></ng-content>
         </div>
 
