--- a/frontend/src/app/view/overview/overview.component.html
+++ b/frontend/src/app/view/overview/overview.component.html
@@ -6,18 +6,263 @@
 
 
   <div class="cards-placeholder">
-    <div class="app-card--sm">zxc1</div>
-    <div class="app-card--sm">zxc2</div>
-    <div class="app-card--sm">zxc3</div>
-    <div class="app-card--sm">zxc4</div>
+    <div class="app-card--sm">
+
+      <div class="card-sm">
+        <div class="image">
+          <img src="https://mir-s3-cdn-cf.behance.net/project_modules/1400_opt_1/27d32389267827.5df0b971656d7.png" alt="">
+        </div>
+        <div class="info-panel">
+          <div class="info">
+            <div class="header">Home Page</div>
+            <div class="label label--passed">Valid</div>
+            <div class="description">1920 × 1080 <span class="more">+3 <i class="hidden-more">1600 × 900, 1024 × 768, 800 × 600</i></span></div>
+          </div>
+          <div class="actions">
+            <span>Play <i class="fas fa-play"></i></span>
+            <span>Latest results</span>
+          </div>
+        </div>
+      </div>
+
+    </div>
+    <div class="app-card--sm">
+
+      <div class="card-sm">
+        <div class="image">
+          <img src="https://mir-s3-cdn-cf.behance.net/project_modules/1400_opt_1/27d32389267827.5df0b971656d7.png" alt="">
+        </div>
+        <div class="info-panel">
+          <div class="info">
+            <div class="header">Home Page</div>
+            <div class="label label--passed">Valid</div>
+            <div class="description">1920 × 1080 <span class="more">+3 <i class="hidden-more">1600 × 900, 1024 × 768, 800 × 600</i></span></div>
+          </div>
+          <div class="actions">
+            <span>Play <i class="fas fa-play"></i></span>
+            <span>Latest results</span>
+          </div>
+        </div>
+      </div>
+
+    </div>
+    <div class="app-card--sm">
+
+      <div class="card-sm">
+        <div class="image">
+          <img src="https://mir-s3-cdn-cf.behance.net/project_modules/1400_opt_1/27d32389267827.5df0b971656d7.png" alt="">
+        </div>
+        <div class="info-panel">
+          <div class="info">
+            <div class="header">Home Page</div>
+            <div class="label label--passed">Valid</div>
+            <div class="description">1920 × 1080 <span class="more">+3 <i class="hidden-more">1600 × 900, 1024 × 768, 800 × 600</i></span></div>
+          </div>
+          <div class="actions">
+            <span>Play <i class="fas fa-play"></i></span>
+            <span>Latest results</span>
+          </div>
+        </div>
+      </div>
+
+    </div>
+    <div class="app-card--sm">
+
+      <div class="card-sm">
+        <div class="image">
+          <img src="https://mir-s3-cdn-cf.behance.net/project_modules/1400_opt_1/27d32389267827.5df0b971656d7.png" alt="">
+        </div>
+        <div class="info-panel">
+          <div class="info">
+            <div class="header">Home Page</div>
+            <div class="label label--passed">Valid</div>
+            <div class="description">1920 × 1080 <span class="more">+3 <i class="hidden-more">1600 × 900, 1024 × 768, 800 × 600</i></span></div>
+          </div>
+          <div class="actions">
+            <span>Play <i class="fas fa-play"></i></span>
+            <span>Latest results</span>
+          </div>
+        </div>
+      </div>
+
+    </div>
   </div>
 
   <div class="records-placeholder">
-    <div class="app-record">Record 1</div>
-    <div class="app-record">Record 2</div>
-    <div class="app-record">Record 3</div>
-    <div class="app-record">Record 4</div>
-    <div class="app-record">Record 5</div>
+
+    <table style="width: 100%">
+      <tr class="app-record">
+        <td>
+
+          <div class="status-cell">
+            <div class="status-icon status-icon--passed">
+              <i class="fas fa-check-circle"></i>
+            </div>
+            <div class="labels">
+              <div class="time-label">3 min ago</div>
+              <div class="state-label">Running now...</div>
+            </div>
+          </div>
+
+        </td>
+        <td>
+          All scenarios
+        </td>
+        <td>
+
+          <div class="user-cell">
+            <div class="upic">JA</div>
+            <span class="text">Jonathan Amos</span>
+          </div>
+
+        </td>
+
+        <td>
+
+          <div class="action-cell action-cell--right">
+            <i class="action-cell-icon fas fa-times"></i>
+          </div>
+
+        </td>
+      </tr>
+      <tr class="app-record">
+        <td>
+
+          <div class="status-cell">
+            <div class="status-icon status-icon--passed">
+              <i class="fas fa-check-circle"></i>
+            </div>
+            <div class="labels">
+              <div class="time-label">3 min ago</div>
+              <div class="state-label">Running now...</div>
+            </div>
+          </div>
+
+        </td>
+        <td>
+          All scenarios
+        </td>
+        <td>
+
+          <div class="user-cell">
+            <div class="upic">JA</div>
+            <span class="text">Jonathan Amos</span>
+          </div>
+
+        </td>
+
+        <td>
+
+          <div class="action-cell action-cell--right">
+            <i class="action-cell-icon fas fa-times"></i>
+          </div>
+
+        </td>
+      </tr>
+      <tr class="app-record">
+        <td>
+
+          <div class="status-cell">
+            <div class="status-icon status-icon--passed">
+              <i class="fas fa-check-circle"></i>
+            </div>
+            <div class="labels">
+              <div class="time-label">3 min ago</div>
+              <div class="state-label">Running now...</div>
+            </div>
+          </div>
+
+        </td>
+        <td>
+          All scenarios
+        </td>
+        <td>
+
+          <div class="user-cell">
+            <div class="upic">JA</div>
+            <span class="text">Jonathan Amos</span>
+          </div>
+
+        </td>
+
+        <td>
+
+          <div class="action-cell action-cell--right">
+            <i class="action-cell-icon fas fa-times"></i>
+          </div>
+
+        </td>
+      </tr>
+      <tr class="app-record">
+        <td>
+
+          <div class="status-cell">
+            <div class="status-icon status-icon--passed">
+              <i class="fas fa-check-circle"></i>
+            </div>
+            <div class="labels">
+              <div class="time-label">3 min ago</div>
+              <div class="state-label">Running now...</div>
+            </div>
+          </div>
+
+        </td>
+        <td>
+          All scenarios
+        </td>
+        <td>
+
+          <div class="user-cell">
+            <div class="upic">JA</div>
+            <span class="text">Jonathan Amos</span>
+          </div>
+
+        </td>
+
+        <td>
+
+          <div class="action-cell action-cell--right">
+            <i class="action-cell-icon fas fa-times"></i>
+          </div>
+
+        </td>
+      </tr>
+      <tr class="app-record">
+        <td>
+
+          <div class="status-cell">
+            <div class="status-icon status-icon--passed">
+              <i class="fas fa-check-circle"></i>
+            </div>
+            <div class="labels">
+              <div class="time-label">3 min ago</div>
+              <div class="state-label">Running now...</div>
+            </div>
+          </div>
+
+        </td>
+        <td>
+          All scenarios
+        </td>
+        <td>
+
+          <div class="user-cell">
+            <div class="upic">JA</div>
+            <span class="text">Jonathan Amos</span>
+          </div>
+
+        </td>
+
+        <td>
+
+          <div class="action-cell action-cell--right">
+            <i class="action-cell-icon fas fa-times"></i>
+          </div>
+
+        </td>
+      </tr>
+    </table>
+
   </div>
 
 </app-overview-layout>
