--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -221,7 +221,7 @@ main {
 }
 .app-widgets-row .action {
   position: absolute;
-  bottom: 25%;
+  bottom: calc(25% - 20px);
 }
 .app-widgets-row .app-widgets-column {
   height: 100%;
@@ -298,373 +298,3 @@ main {
   nav .app-account { display: none; }
 
 }
-
-
-
-
-/* BUTTONS */
-
-.button {
-  border-radius: 50px;
-  border: none;
-  min-height: 40px;
-  padding: 0px 1.25em 0px 1.25em;
-  font-size: 100%;
-  font-family: 'Ubuntu', sans-serif;
-  font-weight: 400;
-  color: #ffffff;
-  cursor: pointer;
-  position: relative;
-  box-shadow: 0px 15px 20px 0 #0000002e, 0px 5px 10px 0 #00000010;
-}
-.button:focus {
-  outline: none;
-}
-.button:hover {
-  filter: opacity(70%) hue-rotate(30deg);
-}
-.button:active {
-  filter: opacity(100%);
-}
-.button + .button {
-  margin-left: 1em;
-}
-
-.button--accent1 { background: #39A0FF; border: 1px solid #39A0FF; }
-.button--accent2 { background: #73C376; border: 1px solid #73C376; }
-.button--dark    { background: #000000; border: 1px solid #000000; }
-.button--white   { background: #ffffff; border: 1px solid #545454; color: #000; }
-
-/* END BUTTONS */
-
-/* HEADERS */
-.column-header {
-  font-weight: 500;
-  font-size: 24px;
-  font-family: 'Ubuntu', sans-serif;
-}
-
-
-/* INPUTS */
-
-.text-field {
-  display: flex;
-  flex-direction: column;
-  margin-bottom: 24px;
-  font-family: 'Ubuntu', sans-serif;
-}
-.text-field--150 {
-  width: 150px;
-}
-.text-field--350 {
-  width: 350px;
-}
-.text-field--500 {
-  width: 500px;
-}
-.text-field--full {
-  width: 1005;
-}
-.text-field label {
-  font-weight: 500;
-  font-size: 16px;
-  color: #1F1F1F;
-}
-.text-field label > i {
-  color: #c7c7c7;
-  cursor: pointer;
-  margin-left: 0.5em;
-}
-.text-field label > i:hover {
-  color: #000000;
-}
-.text-field .description {
-  margin-block-start: 6px;
-  margin-block-end: 6px;
-  letter-spacing: .5px;
-  font-size: 13px;
-  color: #909090;
-  line-height: 150%;
-}
-.text-field .input-box  {
-  margin-top: 10px;
-  display: flex;
-  align-items: center;
-  border: 1px solid #DBDBDB;
-  background: #FBFBFB;
-  border-radius: 3px;
-  height: 36px;
-  overflow: hidden;
-}
-
-.text-field .input-box input[type=text] {
-  border: none;
-  background: transparent;
-  color: #535353;
-  font-family: 'Ubuntu', sans-serif;
-  font-size: 16px;
-  padding-left: 11px;
-  padding-right: 11px;
-  width: 100%;
-  outline: none;
-}
-.text-field .input-box input[type=text]::placeholder {
-  color: #c3c3c3;
-}
-.text-field.text-field--error .input-box:focus-within,
-.text-field .input-box:focus-within {
-  outline: none;
-  border-color: #DBDBDB;
-  border-bottom: 2px solid #FFD600;
-  padding-top: 2px;
-}
-.text-field.text-field--error .input-box {
-  border-color: #EB5757;
-  border-bottom-width: 2px;
-  padding-top: 2px;
-}
-.text-field .input-box .input-box-chips {
-  height: 30px;
-  background: #e8e8e8;
-  color: #535353;
-  border: none;
-  border-radius: 20px;
-  padding-left: 16px;
-  padding-right: 12px;
-  font-family: 'Ubuntu', sans-serif;
-  font-size: 14px;
-  font-weight: 400;
-  margin: 2px;
-  white-space: nowrap;
-  align-items: center;
-  display: flex;
-}
-.text-field .input-box .input-box-chips i {
-  margin-left: 0.5em;
-  cursor: pointer;
-}
-.text-field .input-box .input-box-button {
-  height: 30px;
-  background: #89CB8C;
-  color: #ffffff;
-  border: none;
-  border-radius: 2px;
-  padding-left: 20px;
-  padding-right: 20px;
-  font-family: 'Ubuntu', sans-serif;
-  font-size: 14px;
-  font-weight: 400;
-  margin: 2px;
-  cursor: pointer;
-  outline: none;
-  white-space: nowrap;
-}
-.text-field .input-box .input-box-icon {
-  color: #89CB8C;
-  font-size: 16px;
-  margin-right: 8px;
-  cursor: pointer;
-}
-.text-field .input-box .input-box-icon:hover,
-.text-field .input-box .input-box-button:hover {
-  filter: opacity(70%);
-}
-.text-field .error-message {
-  margin-block-start: 5px;
-  margin-block-end: 0;
-  font-size: 12px;
-  font-weight: 500;
-  letter-spacing: .5px;
-  color: #EB5757;
-  line-height: 135%;
-}
-
-
-/* CHECKBOXES */
-
-.checkbox, .switch, .toggle {
-  font-family: 'Ubuntu', sans-serif;
-  font-size: 16px;
-  font-weight: 500;
-  margin-bottom: 16px;
-  position: relative;
-  color: #1F1F1F;
-}
-.checkbox > input[type=checkbox] {
-}
-.checkbox > input[type=checkbox]:before {
-  content: ' ';
-  position: absolute;
-  width: 16px;
-  height: 16px;
-  top: 0px;
-  left: 1px;
-  border: 1px solid #DBDBDB;
-  background: #FBFBFB;
-  border-radius: 3px;
-  _opacity: .5;
-}
-
-
-
-
-/*
-@import "ag-grid-community/dist/styles/ag-grid.css";
-@import "ag-grid-community/dist/styles/ag-theme-alpine.css";
-
-
-.ag-theme-alpine {
-  -webkit-font-smoothing: antialiased;
-  color: #6A6A6A;
-  font-family: Roboto, sans-serif;
-  font-size: 16px;
-  line-height: normal;
-}
-.ag-theme-alpine .ag-header-row {
-  font-weight: 500;
-  color: #6A6A6A;
-}
-.ag-theme-alpine .ag-header {
-  background-color: unset;
-  border-bottom: solid 1px #EFEFEF;
-  border-bottom-color: #EFEFEF;
-}
-.ag-theme-alpine .ag-root-wrapper {
-  border: none;
-}
-.ag-theme-alpine .ag-row {
-  font-size: 16px;
-  color: #6A6A6A;
-  font-style: normal;
-  font-weight: normal;
-  font-family: Roboto, sans-serif;
-  border: none 1px #EFEFEF;
-}
-.ag-theme-alpine .ag-header {
-  border-bottom: none;
-}
-
-
-.ag-theme-alpine .ag-row-odd {
-  background-color: #ffffff;
-}
-.ag-theme-alpine .ag-cell {
-  line-height: 50px;
-}
-
-:root {
-
-  --schema-darkest: #293962;
-  --schema-dark: #425072;
-  --schema-accent: #e87676;
-  --schema-white: #ffffff;
-
-  --menu-item-accent: #606d8e;
-  --menu-item-disabled: #7788b0;
-  --menu-item-enabled: #ffffff;
-
-  --headers-main: #2c3145;
-  --headers-yellow: #deff82;
-  --headers-green: #35f180;
-
-  --control-label: #5c5c5c;
-  --control-placeholder: #cacaca;
-  --control-parameter-value: rgba(255,255,255, 0.75);
-
-  --accent-success: #5ed17f;
-  --accent-failed: #cd3636;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-html {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  min-height: 100%;
-}
-body {
-  margin: 0;
-  padding: 0;
-  font-family: 'Roboto', sans-serif;
-  height: 100%;
-  min-height: 100%;
-}
-
-h1 {
-  font-size: 45px;
-  font-weight: 900;
-  line-height: .9;
-  letter-spacing: 1px;
-  margin: 0;
-  padding: 0;
-  text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
-}
-h2 {
-  font-size: 36px;
-  font-weight: 700;
-  margin: 0;
-  padding: 0;
-}
-h3 {
-  font-size: 18px;
-  font-weight: 700;
-  margin: 0;
-  padding: 0;
-}
-h4 {
-  font-size: 14px;
-  font-weight: 700;
-  letter-spacing: 1px;
-  margin: 0;
-  padding: 0;
-}
-h5 {
-  font-size: 12px;
-  font-weight: 500;
-  margin: 0;
-  padding: 0;
-}
-
-.main-action {
-  font-style: normal;
-  font-weight: 300;
-  font-size: 14px;
-  line-height: 16px;
-  letter-spacing: 0.25px;
-}
-.page-action {
-  font-size: 12px;
-  font-weight: 500;
-}
-.control-text {
-  font-size: 12px;
-  font-weight: 400;
-}
-.parameter-title {
-  font-size: 18px;
-  font-weight: 700;
-}
-.parameter-value {
-  font-size: 24px;
-  font-weight: 300;
-}
-
-.status-success {
-  color: var(--accent-success);
-}
-.status-failed {
-  color: var(--accent-failed);
-}
-
-
-.rotate {
-  animation: rotate 3s linear infinite;
-}
-
-@keyframes rotate { 100% { transform: rotate(360deg); } }
-
-
-*/
