--- a/frontend/src/app/ui-kit/preview/ui-kit-preview.component.html
+++ b/frontend/src/app/ui-kit/preview/ui-kit-preview.component.html
@@ -28,10 +28,21 @@ button.btn--accent2
 
 
 <h1>Headers</h1>
-<h2 class="column-header">Favorite</h2>
-<pre>
-h2.column-header
-</pre>
+
+<div class="container-500">
+
+  <div class="column-header">
+    <h2>Favorite Scenarios</h2>
+    <span>
+      <span class="action">View All</span>
+      <span class="action action--active">Latest</span>
+      <span class="action">Passed</span>
+      <span class="action">Failed</span>
+    </span>
+  </div>
+
+</div>
+
 
 <h1>Inputs</h1>
 
